2007-05-01  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/compzillaWindowEvents.cpp: Add
	compzillaWindowEvent, a single impl of all the new window event
	ifaces.  Use the NS_FORWARD_NSIDOMEVENT macro to forward to an
	inner nsIDOMEvent.

	* compzilla/public/compzillaIWindowEvents.idl: Add
	compzillaIWindowEvent, compzillaIWindowConfigureEvent,
	compzillaIWindowPropertyEvent interfaces passed to
	compzillaIWindow event listeners.

	* compzilla/src/compzillaWindow.cpp (DestroyWindow): Emit
	"destroy" events.
	(MapWindow): Emit "show" events.
	(UnmapWindow): Emit "hide" events.
	(PropertyChanged): Emit "propertyChange" events.  Use SET_PROP
	macro to make this a bit less verbose.
	(WindowConfigured): Emit "moveResize" without coord data yet.
	(SendWindowEvent): Aggregates a compzillaWindowEvent with a newly
	created nsIDOMEvent and calls NotifyEventListeners with it.

	* compzilla/src/compzillaEventManager.cpp: Add HasEventListeners.

2007-04-25  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/compzillaControl.cpp (AddWindow): No need to cast
	to compzillaIWindow before passing to WindowCreated.

	* compzilla/src/compzillaEventManager.cpp: nsDOMJSUtils.h doesn't
	exist in mozilla1.8.

	* compzilla/src/compzillaWindow.cpp (WindowDamaged): Don't crash
	if a content node isn't a nsIDOMHTMLCanvasElement.

2007-04-24  Chris Toshok  <toshok@ximian.com>

	* compzilla/src/compzillaWindow.cpp: add the methods from
	compzillaControl here, and also extend this class to allow
	multiple content nodes.

	* compzilla/src/compzillaControl.h: move the atoms stuff out of
	here.

	* compzilla/src/compzillaControl.cpp: move many of the methods
	from here to compzillaWindow (everything that did a FindWin
	followed by an operation, basically, like UnmapWindow, MapWindow,
	WindowDestroyed, etc).

	* compzilla/public/compzillaIWindowManager.idl: add the
	compzillaIWindow parameter to WindowCreated, and remove the return
	type.
